# MDCore

./: CMakeLists.txt  README.md
include/: CMakeLists.txt
include/MD/Core/Exceptions/: Generic.hpp
src/: CMakeLists.txt
src/exceptions/: CMakeLists.txt  generic.cpp
